<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="locale">en</string>
    <string name="name" translatable="false">GlucoDataHandler</string>
    <string name="pref_watchfaces_dmm" translatable="false">Diabetic Masked Man</string>
    <string name="menu_settings">Settings</string>
    <string name="source_interval">Interval</string>
    <string name="source_interval_summary">Interval of requesting data from source.</string>
    <string name="source_delay">Delay</string>
    <string name="source_delay_summary">Delay in seconds before requesting the data from cloud, because if takes some time until the data is present there.</string>
    <string name="src_cat_libreview">LibreLinkUp</string>
    <string name="src_enabled">Enable</string>
    <string name="src_libre_enabled_summary">Enable LibreLinkUp follower, if user and password are set.</string>
    <string name="src_libre_user">E-mail</string>
    <string name="src_libre_user_summary">E-mail for LibreLinkUp login</string>
    <string name="src_password">Password</string>
    <string name="src_libre_password_summary">Password for LibreLinkUp</string>
    <string name="src_libre_reconnect">Reconnect</string>
    <string name="src_libre_reconnect_summary">On next interval a new login will be executed.</string>
    <string name="src_cat_nightscout">Nightscout</string>
    <string name="src_ns_enabled">Enable</string>
    <string name="src_ns_enabled_summary">Enable Nightscout follower.</string>
    <string name="src_ns_url">Nightscout URL</string>
    <string name="src_ns_url_summary">URL of the Nightscout server.</string>
    <string name="src_ns_secret">API Secret</string>
    <string name="src_ns_secret_summary">API Secret to access the data (optional).</string>
    <string name="src_ns_token">Access Token</string>
    <string name="src_ns_token_summary">Add your access token, if you need one (optional).</string>
    <string name="pref_information">Information</string>
    <string name="pref_cat_follower">Cloud services</string>
    <string name="pref_source_juggluco_info">Juggluco</string>
    <string name="pref_source_xdrip_info">xDrip+</string>
    <string name="pref_source_xdrip_info_1_summary">To receive values from xDrip+:\n- open xDrip+\n- go to settings\n- go to Inter-app settings\n- enable \"Broadcast locally\"\n- set \"Noise Blocking\" to \"Send even Extremely noisy signals\"</string>
    <string name="pref_source_xdrip_info_2_summary">- enable \"Compatible Broadcast\" - check \"Identify receiver\" to be empty or if an entry already exists, add \"de.michelinside.glucodatahandler\" separated by a space</string>
    <string name="pref_source_librelinkup_info">Setup LibreLinkUp</string>
    <string name="pref_source_librelinkup_info_summary">IMPORTANT: this is not the account used for the FreeStyle Libre App!\nTo activate LibreLinkUp follower:\n- open your FreeStyle Libre App and select in the menu Share or Connected Apps\n- activate LibreLinkUp connection\n- install LibreLinkUp from Play Store\n- setup your account and wait for the invitation</string>
    <string name="src_ns_iob_cob">IOB/COB support</string>
    <string name="src_ns_iob_cob_summary">Receive also IOB and COB values from nightscout pebble endpoint.</string>
    <string name="pref_source_aaps_info">AndroidAPS</string>
    <string name="pref_source_aaps_info_summary">To receive values from AAPS:\n- open AAPS app\n- go to \"Config Builder\"\n- enable \"Samsung Tizen\" or \"Data Broadcaster\"</string>
    <string name="menu_save_mobile_logs">Mobile</string>
    <string name="menu_save_wear_logs">Wear</string>
    <string name="menu_save_logs">Save logs</string>
    <string name="src_libre_patient">Patient</string>
    <string name="src_libre_patient_summary">If there is more then one patient connected to the libre account, please select the patient receiving the data for.</string>
    <string name="alarm_interval">Interval</string>
    <string name="alarm_enabled">Enabled</string>
    <string name="alarm_enabled_summary_on">Notifications are enabled for this alarm type.</string>
    <string name="alarm_enabled_summary_off">Notifications are disabled for this alarm type.</string>
    <string name="alarm_test">Test it</string>
    <string name="alarm_test_summary">Press here to trigger a notification after 3 seconds for this alarm type.</string>
    <string name="alarm_save_sound">Save sound</string>
    <string name="alarm_save_sound_summary">Press here, if you want to save the default alarm sound to a file on your phone.</string>
    <string name="alarm_sound_level">Sound level</string>
    <string name="alarm_sound_level_summary">Force setting sound level for alarm sound.\n-1 for using default settings of phone.</string>
    <string name="advanced_settings">Advanced</string>
    <string name="alarm_retrigger">Retrigger</string>
    <string name="alarm_retrigger_summary">If the alarm notification is not closed, the alarm will be triggered again after this interval in minutes up to 3 times.\n0 - no retrigger</string>
    <string name="alarm_sound">Select custom sound</string>
    <string name="alarm_sound_summary">Silent - no sound</string>
    <string name="alarm_use_custom_sound">Use custom sound</string>
    <string name="alarm_use_custom_sound_summary_on">Use custom selected sound.</string>
    <string name="alarm_use_custom_sound_summary_off">Use app provided sound.</string>
    <string name="alarm_sound_delay">Sound delay</string>
    <string name="alarm_sound_delay_summary">Time in seconds before the sound is played.\nIt will vibrate the whole time, even if there is no sound selected.</string>
    <string name="pref_cat_alarm_vibration_sound">Sound and vibration</string>
    <string name="pref_source_juggluco_iob_info">IOB from Juggluco</string>
    <string name="alarm_inactive_enabled">Enable quiet hours</string>
    <string name="alarm_inactive_enabled_summary">No alarm notifications for this alarm during quiet hours.\nConfigure your preferred times to use this feature.</string>
    <string name="alarm_inactive_start_time">Start time</string>
    <string name="alarm_inactive_start_time_summary">Select the time you want your quiet hours to start.</string>
    <string name="alarm_inactive_end_time">End time</string>
    <string name="alarm_inactive_end_time_summary">Select the time you want your quiet hours to end.</string>
    <string name="pref_export_settings">Export</string>
    <string name="pref_export_settings_summary">Press here to export all settings to a file. \nIMPORTANT: this will only export changed settings! Settings with default values will not be part of the export.</string>
    <string name="pref_import_settings">Import</string>
    <string name="pref_import_settings_summary">Press here to import settings from a file.\nIMPORTANT: this will not re-create default settings, as there are not part of the export.\nIf you want to reset to default, delete the app data first and import afterwards.</string>
    <string name="menu_save_mobile_logs_summary">Save logs from the phone to file.</string>
    <string name="menu_save_wear_logs_summary">Save logs from connected Wear OS watch to file.</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="src_offline_enabled_summary_on">Internal messages from this source will be handled.</string>
    <string name="src_offline_enabled_summary_off">Internal messages from this source will be ignored.</string>
    <string name="source_libre_auto_accept_tou">Auto accept new terms</string>
    <string name="source_libre_auto_accept_tou_summary">By enabling this, you automatically accept new Terms of Use to ensure continuous data reception. You won\'t be informed about new terms separately. If you want to read them, disable this setting and refer to the LibreLinkUp app in case of error 4.</string>
    <string name="alarm_repeat_summary">The alarm will sound and vibrate repeatedly until you dismiss the notification or the set max alarm duration is reached.</string>
    <string name="pref_watchfaces_cat">Third-party watch faces</string>
    <string name="pref_watchfaces_info_summary">This app does not provide a watch face, it provides several complications (the small round watch face parts), which can be used for watch faces supporting 3rd party complications.</string>
    <string name="pref_watchfaces_default">Standard</string>
    <string name="pref_watchfaces_default_summary">Most watch manufacturers already provide watch faces that can be used with the GlucoDataHandler complication.\nFor example, most Samsung \"Info\" watch faces are compatible.</string>
    <string name="pref_watchfaces_pujie">Pujie</string>
    <string name="pref_watchfaces_pujie_summary">Pujie is a watch face creator app with a cloud library.\nTo find compatible watch faces, search the library for watch faces starting with \"GDH_\".\nTap here to open the app in the Play Store.</string>
    <string name="pref_watchfaces_dmm_summary">Diabetic Masked Man creates third-party watch faces specifically designed for use with GlucoDataHandler.\nTap here to open his Play Store page.</string>
    <string name="pref_watchfaces_gdc">GDC Watch Faces</string>
    <string name="pref_watchfaces_gdc_summary">GDC Watch Faces are designed for use with GlucoDataHandler.\nTap here to open the Play Store page.</string>
    <string name="src_libre_server">Server</string>
    <string name="source_libre_server_default">Default (.io)</string>
    <string name="video_tutorial">Video Tutorial</string>
    <string name="video_tutorial_summary">Click here to go to the YouTube video that illustrates the setup of this source. Many thanks to Diabetic Masked Man for creating the videos.</string>
    <string name="menu_database">Database</string>
    <string name="reset_db">Reset database</string>
    <string name="reset_db_summary">Press here to remove all data from database.</string>
    <string name="pref_source_juggluco_info_summary">To receive values from Juggluco:\n- open Juggluco\n- go to \"Settings\"\n- open \"Exchange data\"\n- enable \"Glucodata broadcast\"\n- enable \"de.michelinside.glucodatahandler\"</string>
    <string name="pref_source_juggluco_iob_info_summary">To receive IOB from Juggluco:\n- open Juggluco\n- go to \"Settings\"\n- open \"Display\"\n- enable \"IOB\"</string>
    <string name="src_webserver">Webserver</string>
    <string name="src_juggluco_webserver_summary">Using of Juggluco Webserver for getting sensor age and missed data, if present.\nPlease enable Webserver in Juggluco without SSL and api_secret first.</string>
    <string name="src_iob_support">IOB support</string>
    <string name="src_juggluco_iob_support_summary">Receiving IOB values from Juggluco Webserver.</string>
    <string name="pref_source_juggluco_setup_info">Setup Juggluco</string>
    <string name="pref_source_juggluco_webserver_info">Setup Webserver</string>
    <string name="pref_source_juggluco_webserver_info_summary">To enable webserver in Juggluco:\n- open Juggluco\n- go to \"Settings\"\n- open \"Exchange data\"\n- open \"Web server\"\n- Enable \"Active\"\n- do NOT set \"api_secret\" and \"Use SSL\"!\n- optional: enable \"Local only\"</string>
    <string name="pref_cat_log_to_db">Log to database</string>
    <string name="pref_log_to_db_summary">Warning: Saving logs to the database can impact performance and battery life.\nPlease enable this option only when instructed by the developer to help analyze an issue.</string>
    <string name="pref_log_duration_size">Log retention period</string>
    <string name="pref_log_duration_summary">Number of hours to keep logs in the database.\nSet to 0 to disable logging to the database.</string>
    <string name="pref_log_debug">Enable debug logging</string>
    <string name="pref_log_debug_summary">Enable saving of detailed debug messages to the database (max. last 30 minutes).\nOnly enable this if requested by the developer.</string>
</resources>