<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
            android:key="cat_alarm"
            app:iconSpaceReserved="false"
            app:initialExpandedChildrenCount="2">
        <androidx.preference.SwitchPreferenceCompat
            android:key="_enabled"
            android:defaultValue="true"
            android:title="@string/alarm_enabled"
            android:summaryOn="@string/alarm_enabled_summary_on"
            android:summaryOff="@string/alarm_enabled_summary_off"
            app:iconSpaceReserved="false" />
        <androidx.preference.SeekBarPreference
            app:showSeekBarValue="true"
            app:seekBarIncrement="1"
            app:min="5"
            android:max="120"
            android:key="_interval"
            android:title="@string/alarm_interval"
            app:iconSpaceReserved="false" />
        <androidx.preference.SwitchPreferenceCompat
            android:key="_inactive_enabled"
            android:defaultValue="false"
            android:title="@string/alarm_inactive_enabled"
            android:summary="@string/alarm_inactive_enabled_summary"
            app:iconSpaceReserved="false" />
        <de.michelinside.glucodatahandler.preferences.MyTimeTickerPreference
            android:key="_inactive_start_time"
            android:title="@string/alarm_inactive_start_time"
            android:summary="@string/alarm_inactive_start_time_summary"
            app:pref_hourFormat="auto"
            app:pref_pickerTime="23:00"
            app:pref_summaryHasTime="%s"
            app:iconSpaceReserved="false" />
        <de.michelinside.glucodatahandler.preferences.MyTimeTickerPreference
            android:key="_inactive_end_time"
            android:title="@string/alarm_inactive_end_time"
            android:summary="@string/alarm_inactive_end_time_summary"
            app:pref_hourFormat="auto"
            app:pref_pickerTime="07:00"
            app:pref_summaryHasTime="%s"
            app:iconSpaceReserved="false" />
        </PreferenceCategory>
        <PreferenceCategory
            android:key="cat_alarm_sound"
            android:title="@string/pref_cat_alarm_vibration_sound"
            app:iconSpaceReserved="false"
            app:initialExpandedChildrenCount="0">
                <androidx.preference.SeekBarPreference
                    app:showSeekBarValue="true"
                    app:seekBarIncrement="1"
                    app:min="-1"
                    android:defaultValue="-1"
                    android:key="_sound_level"
                    android:title="@string/alarm_sound_level"
                    android:summary="@string/alarm_sound_level_summary"
                    app:iconSpaceReserved="false" />
                <androidx.preference.SwitchPreferenceCompat
                    android:key="_use_custom_sound"
                    android:defaultValue="false"
                    android:title="@string/alarm_use_custom_sound"
                    android:summaryOn="@string/alarm_use_custom_sound_summary_on"
                    android:summaryOff="@string/alarm_use_custom_sound_summary_off"
                    app:iconSpaceReserved="false" />
                <Preference
                    android:key="_custom_sound"
                    android:title="@string/alarm_sound"
                    android:summary="@string/alarm_sound_summary"
                    app:iconSpaceReserved="false" />
                <androidx.preference.SeekBarPreference
                    app:showSeekBarValue="true"
                    app:seekBarIncrement="1"
                    app:defaultValue="0"
                    app:min="0"
                    android:max="30"
                    android:key="_sound_delay"
                    android:title="@string/alarm_sound_delay"
                    android:summary="@string/alarm_sound_delay_summary"
                    app:iconSpaceReserved="false" />
                <androidx.preference.SeekBarPreference
                    app:showSeekBarValue="true"
                    app:seekBarIncrement="1"
                    app:defaultValue="0"
                    app:min="-1"
                    android:max="5"
                    android:key="_repeat"
                    android:title="@string/alarm_repeat"
                    android:summary="@string/alarm_repeat_summary"
                    app:iconSpaceReserved="false" />
                <androidx.preference.SeekBarPreference
                    app:showSeekBarValue="true"
                    app:seekBarIncrement="1"
                    app:defaultValue="0"
                    app:min="0"
                    android:max="15"
                    android:key="_retrigger"
                    android:title="@string/alarm_retrigger"
                    android:summary="@string/alarm_retrigger_summary"
                    app:iconSpaceReserved="false" />
        </PreferenceCategory>
        <PreferenceCategory
            android:key="cat_alarm_advanced"
            android:title="@string/advanced_settings"
            app:iconSpaceReserved="false"
            app:initialExpandedChildrenCount="0">
                <Preference
                    android:key="_test"
                    android:title="@string/alarm_test"
                    android:summary="@string/alarm_test_summary"
                    app:iconSpaceReserved="false" />
                <Preference
                    android:key="_save_sound"
                    android:title="@string/alarm_save_sound"
                    android:summary="@string/alarm_save_sound_summary"
                    app:iconSpaceReserved="false" />
        </PreferenceCategory>
</PreferenceScreen>